[package]
name = "day10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
itertools = "0.12.0"
nom = "7.1.3"
rayon = "1.8.0"
tinyset = "0.4.15"

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
opt-level = "s"
# panic = "abort"

# [unstable]
# build-std = true
