[package]
name = "day1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.2"
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
nom = "7.1.3"
once_cell = "1.18.0"
phf = { version = "0.11.2", features = ["macros"] }
rayon = "1.8.0"
regex = "1.10.2"
